--- a/templates/foreign/question_detail.html
+++ b/templates/foreign/question_detail.html
@@ -36,12 +36,12 @@
                             <span class="post-author">{{ comment.comment_author.nickname }}</span>
                             <span class="comment-date">{{ comment.created_at|date:"Y.m.d" }} </span>
                             {% if comment.secret == True %}
-                            비밀댓글
+                            <i class="fas fa-lock fa-xs post-lock"></i>
                             {% endif %}
                         </div>
                         <div>
                             {% if request.user == comment.comment_author %}
-                            <button class="light-button s-btn update " onclick="EditComment('{{ comment.id }}' ,'{{ comment.comment_content }}')">수정</button>
+                            <button class="light-button s-btn update " onclick="EditComment('{{ comment.id }}' ,'{{ comment.comment_content }}','{{comment.secret}}')">수정</button>
                             <button class="light-button s-btn post-button delete " onclick="onClickDelete('{{ comment.id }}' )">삭제</button>
                             {% endif %}
                             {% if is_authenticated == True %}
@@ -49,7 +49,15 @@
                             {% endif %}
                         </div>
                     </div>
-                    <p class="comment-content">{{ comment.comment_content }}</p>
+                    {% if comment.secret == True %}
+                        {% if request.user == comment.comment_author or request.user == question.author %}
+                            <p class="comment-content">{{ comment.comment_content }}</p>
+                        {% else %}
+                            <span>비밀 댓글입니다</span>
+                        {% endif %}
+                    {% else %}
+                        <p class="comment-content">{{ comment.comment_content }}</p>
+                    {% endif %}
                 </div>
                 <div class="undercomment_list_{{ comment.pk }}">
                     {% for undercomment in undercomments  %}
@@ -78,9 +86,9 @@
             {% if is_authenticated == True %}
             <div class="new-comment d-flex align-items-center">
                 비밀댓글
-                <input class="new-comment-unchecked" id="GetSecret" type="checkbox" name="secret" onclick="onClickSecret()"/>
+                <input class="new-comment-checked" id="GetSecret" type="checkbox"  name="secret" /> 
                 <input class="new-comment-input flex-grow-1" type="text" name="comment_content" id="comment_{{ question.pk }}" placeholder='댓글달기...' style="width: 80%;"/>                
-                <button class="blue-button s-btn post-button submit" onclick="onClickComment('{{ user.is_authenticated }}', '{{ question.pk }}', document.querySelector('#comment_{{ question.pk }}').value ,document.querySelector('#GetSecret').className)">등록</button>
+                <button class="blue-button s-btn post-button submit" onclick="onClickComment('{{ user.is_authenticated }}', '{{ question.pk }}', document.querySelector('#comment_{{ question.pk }}').value , document.getElementsByName('secret')[0].checked)">등록</button>
             </div>
             {% endif %}
         </div>
@@ -119,7 +127,7 @@
                     <span class="comment-date">{{ now |date:"Y.m.d" }} </span>
                 </div>
                 <div>
-                    <button class="light-button s-btn update " onclick="EditComment('${comment_id}', '${comment_content}')">수정</button>
+                    <button class="light-button s-btn update " onclick="EditComment('${comment_id}', '${comment_content}','${secret}')">수정</button>
                     <button class="light-button s-btn delete post-button" onclick="onClickDelete('${comment_id}')">삭제</button>
                     <button class="light-button s-btn post-button" id='undercomment' onclick="undercommentPlus('${comment_id}')">댓글</button><br/>
                 </div>
@@ -129,6 +137,7 @@
         <div class="undercomment_list_${comment_id}"></div>
         <div class="undercomment-container undercomment_${comment_id}"></div>
         `;
+
         if(secret){
             const parent = document.querySelector(`.comment_${comment_id}`)
             const inform_secret = parent.firstElementChild.firstElementChild
@@ -138,10 +147,14 @@
         }
         const input_content = document.querySelector(`#comment_${question_id}`);
         input_content.value = null;
+        const newcomment_checked = document.getElementsByName('secret');
+        newcomment_checked[0].checked = false;
+
+
     };
     
     //댓글 수정
-    const EditComment = (comment_id,comment_content)=>{
+    const EditComment = (comment_id,comment_content,is_secret)=>{
         const element = document.querySelector(`.comment_${comment_id}`);
         element.innerHTML = ` 
             <div class=" d-flex justify-content-between">
@@ -149,13 +162,25 @@
                     <span class="post-author">{{request.user.nickname}}</span>
                     <span class="comment-date">{{ now|date:"Y.m.d" }} </span>
                 </div>
-                <button class="blue-button s-btn post-button" onclick="onClickUpdate('${comment_id}', document.querySelector('#edit_comment').value)">저장</button>
+                <button class="blue-button s-btn post-button" onclick="onClickUpdate('${comment_id}', document.querySelector('#edit_comment').value,document.getElementsByName('edit_secret')[0].checked)">저장</button>
             </div>
+            비밀댓글
+            <input class="edit-comment-checked" type="checkbox" name="edit_secret" /> 
             <input class="edit-comment-input" type="text" id="edit_comment" value='${comment_content}' />
             `;
+
+        const comment_checked = document.getElementsByName("edit_secret");      
+        //python:true checkbox:True 로 표현됨
+        if(is_secret=='True'||is_secret=='true'){
+            comment_checked[0].checked = true;
+        }else{
+            comment_checked[0].checked = false;
+        }
+        
     };
 
-    const onClickUpdate= async(comment_id,comment_content) => { 
+    const onClickUpdate = async(comment_id,comment_content,edit_secret) => {
+        console.log('asdf')
         const allowance =  confirm('수정하시겠습니까?'); 
         if (allowance == true) {
             const url = './comment_update/';
@@ -164,14 +189,14 @@
                 headers:{
                     'Content-Type': 'application/x-www-form-urlencoded'
                 },
-                body: JSON.stringify({comment_id:comment_id, comment_content:comment_content})
+                body: JSON.stringify({comment_id:comment_id, comment_content:comment_content,secret:edit_secret})
             }); 
-            const {comment_id:id, comment_content:content, nickname:nickname} = await res.json();        
-            UpdateHandleResponse(id,content,nickname);
+            const {comment_id:id, comment_content:content, nickname:nickname,secret:secret} = await res.json();        
+            UpdateHandleResponse(id,content,nickname,secret);
         };
     };
 
-    const UpdateHandleResponse = (comment_id,comment_content,nickname)=>{
+    const UpdateHandleResponse = (comment_id,comment_content,nickname,secret)=>{
         const element = document.querySelector(`.comment_${comment_id}`);
         element.innerHTML = `
         <div class=" d-flex justify-content-between">
@@ -180,13 +205,20 @@
                 <span class="comment-date">{{ now|date:"Y.m.d" }} </span>
             </div>
             <div>
-                <button class="light-button s-btn update " onclick="EditComment(${comment_id} ,'${comment_content}')">수정</button>
+                <button class="light-button s-btn update " onclick="EditComment(${comment_id} ,'${comment_content}','${secret}')">수정</button>
                 <button class="light-button s-btn post-button delete " onclick="onClickDelete(${comment_id} )">삭제</button>
                 <button class="light-button s-btn post-button" id='undercomment' onclick="undercommentPlus('${comment_id}')">댓글</button><br/>
             </div>
         </div>
         <p class="comment-content">${comment_content}</p>
         `;
+        if(secret){
+            const parent = document.querySelector(`.comment_${comment_id}`);
+            const inform_secret = parent.firstElementChild.firstElementChild;
+            const new_i = document.createElement('i');
+            new_i.className = "fas fa-lock fa-xs post-lock";
+            inform_secret.append(new_i)
+        }
     };
 
 
@@ -325,18 +357,6 @@
         element.remove();
     };
 
-    var count=0;
-    //비밀 댓글
-    const onClickSecret = ()=>{
-        const element = document.querySelector('#GetSecret')
-        count+=1;
-        if(count%2==1){
-            element.className = 'new-comment-checked'
-        }
-        else{
-            element.className = 'new-comment-unchecked'
-        }
-    }
     </script>
 
 {% endblock %}
